--- a/deployment/Dockerfile.deploy
+++ b/deployment/Dockerfile.deploy
@@ -8,7 +8,7 @@ RUN apk update && apk add --no-cache \
     libpq-dev \
     postgresql-dev \
     && pip install --upgrade pip \
-    && pip install -U poetry \
+    && pip install -U poetry==1.0.0a0 \
     && pip install gunicorn uvicorn[standard]
 
 WORKDIR /application/src
