feat: update launch configuration port and change database name in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: secret
-      POSTGRES_DB: jalo
+      POSTGRES_DB: unicon
     ports:
       - 5440:5432
     networks:
