--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,8 +43,8 @@ coverage-badge = "^1.1.1"
 [tool.ruff]
 src = ["src"]
 target-version = "py310"
-select = ["ALL"]
-ignore = [
+lint.select = ["ALL"]
+lint.ignore = [
     "ANN",    # Type hints related, let mypy/pyright handle these.
     "COM812", # "Trailing comma missing". If black is happy, I'm happy.
     "D104",   # Missing docstring in public package
@@ -58,7 +58,7 @@ ignore = [
     "FIX002", # Allow TODOs in the code
     "TD002",  # Missing author in TODO
     "TD003",  # Allow simples TODOs
-    "TRY200",
+    "B904",
     "A002",   #
     "A003",   #
     "B008",   # Do not perform function call `function` in argument defaults
@@ -69,13 +69,13 @@ ignore = [
     "A005",
 ]
 
-[tool.ruff.flake8-annotations]
+[tool.ruff.lint.flake8-annotations]
 allow-star-arg-any = true
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 known-first-party = ["src"]
 
-[tool.ruff.pydocstyle]
+[tool.ruff.lint.pydocstyle]
 convention = "numpy"
 
 [tool.coverage.run]
