--- a/deployment/Dockerfile.deploy
+++ b/deployment/Dockerfile.deploy
@@ -13,11 +13,11 @@ RUN apk update && apk add --no-cache \
 
 WORKDIR /application/src
 
-COPY ./pyproject.toml ./poetry.lock* /tmp/
-RUN cd /tmp \
-    && poetry export -f requirements.txt --output /application/requirements.txt --without-hashes --dev \
-    && pip install --no-warn-script-location --disable-pip-version-check --no-cache-dir -r /application/requirements.txt \
-    && rm -rf /tmp/*
+# Copiar archivos de configuración de Poetry
+COPY pyproject.toml poetry.lock* ./
+
+# Instalar dependencias de Poetry
+RUN poetry install --no-root --only main
 
 COPY ./src /application/src
 EXPOSE 9000
