--- a/deployment/Dockerfile.deploy
+++ b/deployment/Dockerfile.deploy
@@ -21,4 +21,5 @@ RUN poetry install --no-root --only main
 
 COPY ./src /application/src
 EXPOSE 9000
-CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port 9000 --workers 1"]
+CMD ["poetry", "run", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "9000", "--workers", "2"]
+
