feat: update launch configuration for Go API debugging

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,17 +2,14 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Run API fast api",
-            "type": "debugpy",
+            "name": "API Go",
+            "type": "go",
             "request": "launch",
-            "module": "uvicorn",
-            "args": [
-                "main:app",
-                "--reload",
-                "--port", "8000"
-            ],
-            "console": "integratedTerminal",
-            "cwd": "${workspaceFolder}/src"
+            "mode": "debug",
+            "program": "${workspaceFolder}/cmd/api/main.go",
+            "cwd": "${workspaceFolder}",
+            "env": {},
+            "args": []
         }
     ]
 }
